--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   border: none;
 }
 body {
+  background-color: rgb(201, 201, 201);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
