--- a/src/component/Payment/Payment.css
+++ b/src/component/Payment/Payment.css
@@ -30,3 +30,48 @@
 .payment__container a {
   text-decoration: none;
 }
+
+.payment__info {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.payment__info > span > button {
+  margin: 5px;
+  background: #ffbe31;
+  border-radius: 7px;
+  height: 30px;
+  margin-top: 10px;
+  padding: 7px;
+}
+
+CardElement {
+  margin: 20px;
+}
+
+.payment__priceContainer {
+  margin-top: 10px;
+}
+
+.payment__btn_disabled {
+  margin-top: 10px;
+  background: #a8a8a8;
+  border-radius: 7px;
+  height: 30px;
+  margin-top: 10px;
+  padding: 7px;
+}
+
+.payment__btn_active {
+  margin-top: 10px;
+  background: #ffbe31;
+  border-radius: 7px;
+  height: 30px;
+  margin-top: 10px;
+  padding: 7px;
+}
+
+.payment__details > h3 {
+  padding-bottom: 20px;
+}
